--- a/project/cliente/templates/cliente/crear.html
+++ b/project/cliente/templates/cliente/crear.html
@@ -5,11 +5,20 @@
 {% endblock contenido_titulo %}
 
 {% block contenido %}
+    {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
 
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Guardar</button>
-    </form>
+    {% if not messages %}
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Guardar</button>
+        </form>
+    {% endif %}
 
 {% endblock contenido %}
