--- a/project/core/templates/core/base.html
+++ b/project/core/templates/core/base.html
@@ -12,12 +12,13 @@
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="{% static 'core/assets/favicon.ico' %}" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="{% static 'core/css/styles.css' %}" rel="stylesheet" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"  integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-gpGfzbzzVCEhY5KgPZNDEzfcSU2XOdFNTBb6Ukd5HxCt6l5fZgAfgI5Gz7LH6FA" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link href="{% static 'core/css/styles.css' %}" rel="stylesheet" />
 
+    
 </head>
 
 <body>
@@ -39,7 +40,7 @@
                 <p>This is a template that is great for small businesses. It doesn't have too much fancy flare to it,
                     but it makes a great use of the standard Bootstrap core components. Feel free to use this template
                     for any project you want!</p>
-                
+
             </div>
         </div>
         <!-- Call to Action-->
@@ -47,8 +48,10 @@
             <div class="card-header">Busqueda</div>
             <div class="card-body">
                 <div class="input-group">
-                    <input class="form-control" type="text" placeholder="Ingrese su busqueda" aria-label="Enter search term..." aria-describedby="button-search">
+                    <input class="form-control" type="text" placeholder="Ingrese su busqueda"
+                        aria-label="Enter search term..." aria-describedby="button-search">
                     <button class="btn btn-primary" id="button-search" type="button">Vamos</button>
+
                 </div>
             </div>
         </div>
@@ -57,11 +60,9 @@
             {% block tarjetas %}
             {% endblock tarjetas %}
         </div>
-       
+
         <!-- Footer-->
         {% include 'core/footer.html' %}
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="{% static 'core/js/scripts.js' %}"></script>
 </body>
