--- a/project/cliente/templates/cliente/crear.html
+++ b/project/cliente/templates/cliente/crear.html
@@ -4,6 +4,10 @@
     Crear cliente
 {% endblock contenido_titulo %}
 
+{% block tarjetas %}
+    {# Omitir el bloque tarjetas para ocultar la barra de búsqueda #}
+{% endblock tarjetas %}
+
 {% block contenido %}
     {% if messages %}
         <ul class="messages">
@@ -20,5 +24,4 @@
             <button type="submit">Guardar</button>
         </form>
     {% endif %}
-
 {% endblock contenido %}
