--- a/project/cliente/templates/cliente/busqueda.html
+++ b/project/cliente/templates/cliente/busqueda.html
@@ -4,8 +4,11 @@
     BUSQUEDA
 {% endblock contenido_titulo %}
 
-{% block contenido %}
+{% block tarjetas %}
+    {# Omitir el bloque tarjetas para ocultar la barra de búsqueda #}
+{% endblock tarjetas %}
 
+{% block contenido %}
     <h2>Cliente nombre</h2>
     {% for cliente in cliente_nombre %}
         <p>{{ cliente}}</p>
@@ -20,5 +23,4 @@
     {% for cliente in cliente_pais %}
         <p>{{ cliente}}</p>
     {% endfor %}
-
 {% endblock contenido %}
