Se saco barra de busqueda de secciones nosotros y clientes

--- a/project/cliente/templates/cliente/crear.html
+++ b/project/cliente/templates/cliente/crear.html
@@ -4,6 +4,14 @@
     Crear cliente
 {% endblock contenido_titulo %}
 
+{% block tarjetas %}
+    {# Omitir el bloque tarjetas para ocultar la barra de búsqueda #}
+{% endblock tarjetas %}
+
+{% block busqueda %}
+    {# Deja este bloque vacío o simplemente no lo incluyas para ocultar la barra de búsqueda #}
+{% endblock busqueda %}
+
 {% block contenido %}
     {% if messages %}
         <ul class="messages">
@@ -20,5 +28,4 @@
             <button type="submit">Guardar</button>
         </form>
     {% endif %}
-
 {% endblock contenido %}
