--- a/project/core/templates/core/base.html
+++ b/project/core/templates/core/base.html
@@ -12,7 +12,7 @@
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="{% static 'core/assets/favicon.ico' %}" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"  integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-gpGfzbzzVCEhY5KgPZNDEzfcSU2XOdFNTBb6Ukd5HxCt6l5fZgAfgI5Gz7LH6FA" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
@@ -26,9 +26,6 @@
     <!-- Page Content-->
     {% block contenido_titulo %}
     {% endblock contenido_titulo %}
-
-    {% block contenido %}
-    {% endblock contenido %}
 
     <div class="container px-4 px-lg-5">
         <!-- Heading Row-->
@@ -52,7 +49,7 @@
                            aria-label="Enter search term..." aria-describedby="button-search">
                     <button class="btn btn-primary" type="submit">Vamos</button>
                     {% if results %}
-                        <a href="{% url 'core:buscar' %}" class="btn btn-danger">Borrar resultados</a>
+                        <a href="{% url 'core:buscar' %}?borrar" class="btn btn-danger">Borrar resultados</a>
                     {% endif %}
                 </div>
             </form>
@@ -65,19 +62,19 @@
                     {% include 'core/card.html' with titulo=result.nombre imagen=result.imagen descripcion=result.descripcion %}
                 {% endfor %}
             </div>
-        {% endif %}
+            {% endif %}
         </div>
-        <!-- Content Row-->
-        <div class="row gx-4 gx-lg-5">
-            {% block tarjetas %}
-            {% endblock tarjetas %}
-        </div>
-
-        <!-- Footer-->
-        {% include 'core/footer.html' %}
-        <!-- Core theme JS-->
-        <script src="{% static 'core/js/scripts.js' %}"></script>
     </div>
+    <!-- Content Row-->
+    <div class="row gx-4 gx-lg-5">
+        {% block tarjetas %}
+        {% endblock tarjetas %}
+    </div>
+
+    <!-- Footer-->
+    {% include 'core/footer.html' %}
+    <!-- Core theme JS-->
+    <script src="{% static 'core/js/scripts.js' %}"></script>
 </body>
 
 </html>
