Correccion de rutas

--- a/project/core/templates/core/base.html
+++ b/project/core/templates/core/base.html
@@ -70,7 +70,9 @@
         {% block tarjetas %}
         {% endblock tarjetas %}
     </div>
-
+    {% block contenido %}
+    
+    {% endblock contenido %}
     <!-- Footer-->
     {% include 'core/footer.html' %}
     <!-- Core theme JS-->
