--- a/project/login/templates/login/custom_login.html
+++ b/project/login/templates/login/custom_login.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Registro</title>
     <link rel="icon" type="image/x-icon" href="{% static 'core/assets/favicon.ico' %}" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -40,7 +40,7 @@
             <div class="col-md-6">
                 <div class="card">
                     <div class="card-header">
-                        <h2 class="text-center">Login</h2>
+                        <h2 class="text-center">Registro</h2>
                     </div>
                     <div class="card-body">
                         <form method="post" action="{% url 'login' %}" class="needs-validation" novalidate>
@@ -49,18 +49,26 @@
                                 <label for="id_username">Usuario:</label>
                                 <input type="text" name="username" id="id_username" class="form-control" required>
                                 <div class="invalid-feedback">
-                                    Please enter your username.
+                                    Por favor, ingresa tu usuario.
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="id_password">Contraseña:</label>
                                 <input type="password" name="password" id="id_password" class="form-control" required>
                                 <div class="invalid-feedback">
-                                    Please enter your password.
+                                    Por favor, ingresa tu contraseña.
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-primary btn-block">Login</button>
+                            <div class="form-group">
+                                <label for="id_email">Correo Electrónico:</label>
+                                <input type="email" name="email" id="id_email" class="form-control" required>
+                                <div class="invalid-feedback">
+                                    Por favor, ingresa tu correo electrónico.
+                                </div>
+                            </div>
+                            <button type="submit" class="btn btn-primary btn-block">Registrarse</button>
                         </form>
+                        <p class="text-center mt-3">¿Ya tienes una cuenta? <a href="{% url 'login' %}">Iniciar sesión</a></p>
                     </div>
                 </div>
             </div>
