--- a/project/login/templates/login/custom_login.html
+++ b/project/login/templates/login/custom_login.html
@@ -40,27 +40,34 @@
             <div class="col-md-6">
                 <div class="card">
                     <div class="card-header">
-                        <h2 class="text-center">Registro</h2>
+                        <h2 class="text-center">Registro e Inicio de Sesión</h2>
                     </div>
                     <div class="card-body">
+                        <!-- Formulario de inicio de sesión -->
                         <form method="post" action="{% url 'login' %}" class="needs-validation" novalidate>
                             {% csrf_token %}
+                            <!-- Campos y botón del formulario de inicio de sesión -->
+                        </form>
+
+                        <!-- Formulario de registro -->
+                        <form method="post" action="{% url 'registro' %}" class="needs-validation" novalidate>
+                            {% csrf_token %}
                             <div class="form-group">
-                                <label for="id_username">Usuario:</label>
+                                <label for="id_username">Ingrese su nombre de usuario:</label>
                                 <input type="text" name="username" id="id_username" class="form-control" required>
                                 <div class="invalid-feedback">
                                     Por favor, ingresa tu usuario.
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="id_password">Contraseña:</label>
+                                <label for="id_password">Ingrese su contraseña:</label>
                                 <input type="password" name="password" id="id_password" class="form-control" required>
                                 <div class="invalid-feedback">
                                     Por favor, ingresa tu contraseña.
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="id_email">Correo Electrónico:</label>
+                                <label for="id_email">Ingrese su correo electrónico:</label>
                                 <input type="email" name="email" id="id_email" class="form-control" required>
                                 <div class="invalid-feedback">
                                     Por favor, ingresa tu correo electrónico.
@@ -68,12 +75,15 @@
                             </div>
                             <button type="submit" class="btn btn-primary btn-block">Registrarse</button>
                         </form>
-                        <p class="text-center mt-3">¿Ya tienes una cuenta? <a href="{% url 'login' %}">Iniciar sesión</a></p>
+
+                        <p class="text-center mt-3">¿Ya tienes una cuenta? <a href="{% url 'login' %}">Iniciar
+                                sesión</a></p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
