--- a/project/core/templates/core/navbar.html
+++ b/project/core/templates/core/navbar.html
@@ -4,10 +4,12 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <!-- core/templates/core/navbar.html -->
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'core:index' %}">Inicio</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'core:about' %}">Nosotros</a></li>
                 <li class="nav-item"><a class="nav-link" href="#!">Blog</a></li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'cliente:crear' %}">Clientes</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'core:cliente' %}">Clientes</a></li>
+
                             </ul>
         </div>
     </div>
