--- a/project/login/templates/login/custom_login.html
+++ b/project/login/templates/login/custom_login.html
@@ -1,93 +1,35 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'core/base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro</title>
-    <link rel="icon" type="image/x-icon" href="{% static 'core/assets/favicon.ico' %}" />
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-        integrity="sha384-gpGfzbzzVCEhY5KgPZNDEzfcSU2XOdFNTBb6Ukd5HxCt6l5fZgAfgI5Gz7LH6FA"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
-    <link href="{% static 'core/css/styles.css' %}" rel="stylesheet" />
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            background-image: url("{% static 'core/img/thebestever.jpg' %}");
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            opacity: 0.8;
-            background-position-y: 20%;
-        }
-    </style>
-</head>
 
-<body>
-
-    <div class="container mt-5">
-        <div class="row justify-content-center">
-            <div class="col-md-6">
-                <div class="card">
-                    <div class="card-header">
-                        <h2 class="text-center">Registro e Inicio de Sesión</h2>
-                    </div>
-                    <div class="card-body">
-                        <!-- Formulario de inicio de sesión -->
-                        <form method="post" action="{% url 'login' %}" class="needs-validation" novalidate>
-                            {% csrf_token %}
-                            <!-- Campos y botón del formulario de inicio de sesión -->
-                        </form>
-
-                        <!-- Formulario de registro -->
-                        <form method="post" action="{% url 'registro' %}" class="needs-validation" novalidate>
-                            {% csrf_token %}
-                            <div class="form-group">
-                                <label for="id_username">Ingrese su nombre de usuario:</label>
-                                <input type="text" name="username" id="id_username" class="form-control" required>
-                                <div class="invalid-feedback">
-                                    Por favor, ingresa tu usuario.
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="id_password">Ingrese su contraseña:</label>
-                                <input type="password" name="password" id="id_password" class="form-control" required>
-                                <div class="invalid-feedback">
-                                    Por favor, ingresa tu contraseña.
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="id_email">Ingrese su correo electrónico:</label>
-                                <input type="email" name="email" id="id_email" class="form-control" required>
-                                <div class="invalid-feedback">
-                                    Por favor, ingresa tu correo electrónico.
-                                </div>
-                            </div>
-                            <button type="submit" class="btn btn-primary btn-block">Registrarse</button>
-                        </form>
-
-                        <p class="text-center mt-3">¿Ya tienes una cuenta? <a href="{% url 'login' %}">Iniciar
-                                sesión</a></p>
-                    </div>
-                </div>
-            </div>
-        </div>
+{% block contenido %}
+  <h2>Registro</h2>
+  <form method="post" action="{% url 'login:custom_login' %}" class="needs-validation" novalidate>
+    {% csrf_token %}
+    
+    <div class="form-group">
+      <label for="id_username">Ingrese su nombre de usuario:</label>
+      <input type="text" name="username" id="id_username" class="form-control" required>
+      <div class="invalid-feedback">
+        Por favor, ingresa tu usuario.
+      </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <div class="form-group">
+      <label for="id_password">Ingrese su contraseña:</label>
+      <input type="password" name="password" id="id_password" class="form-control" required>
+      <div class="invalid-feedback">
+        Por favor, ingresa tu contraseña.
+      </div>
+    </div>
 
-</body>
+    <div class="form-group">
+      <label for="id_email">Ingrese su correo electrónico:</label>
+      <input type="email" name="email" id="id_email" class="form-control" required>
+      <div class="invalid-feedback">
+        Por favor, ingresa tu correo electrónico.
+      </div>
+    </div>
 
-</html>
+    <button type="submit" class="btn btn-primary btn-block">Registrarse</button>
+  </form>
+{% endblock %}
