--- a/project/core/templates/core/navbar.html
+++ b/project/core/templates/core/navbar.html
@@ -8,9 +8,8 @@
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'core:index' %}">Inicio</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'core:about' %}">Nosotros</a></li>
                 <li class="nav-item"><a class="nav-link" href="#!">Blog</a></li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'core:cliente' %}">Clientes</a></li>
-
-                            </ul>
+                <li class="nav-item"><a class="nav-link" href="{% url 'login:custom_login' %}">Inicio de Sesión</a></li>
+             </ul>
         </div>
     </div>
 </nav>
