--- a/project/login/templates/login/custom_login.html
+++ b/project/login/templates/login/custom_login.html
@@ -1,35 +1,48 @@
 {% extends 'core/base.html' %}
 
-
 {% block contenido %}
-  <h2>Registro</h2>
-  <form method="post" action="{% url 'login:custom_login' %}" class="needs-validation" novalidate>
-    {% csrf_token %}
-    
-    <div class="form-group">
-      <label for="id_username">Ingrese su nombre de usuario:</label>
-      <input type="text" name="username" id="id_username" class="form-control" required>
-      <div class="invalid-feedback">
-        Por favor, ingresa tu usuario.
+  <div class="container mt-5">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-header">
+            <h2 class="text-center">Registro</h2>
+          </div>
+          <div class="card-body">
+            <form method="post" action="{% url 'login:custom_login' %}" class="needs-validation" novalidate>
+
+              {% csrf_token %}
+
+              <div class="form-group">
+                <label for="id_username">Nombre de usuario:</label>
+                <input type="text" name="username" id="id_username" class="form-control" required>
+                <div class="invalid-feedback">
+                  Por favor, ingresa tu usuario.
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label for="id_password">Contraseña:</label>
+                <input type="password" name="password" id="id_password" class="form-control" required>
+                <div class="invalid-feedback">
+                  Por favor, ingresa tu contraseña.
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label for="id_email">Correo electrónico:</label>
+                <input type="email" name="email" id="id_email" class="form-control" required>
+                <div class="invalid-feedback">
+                  Por favor, ingresa tu correo electrónico.
+                </div>
+              </div>
+
+              <button type="submit" class="btn btn-primary btn-block">Registrarse</button>
+            </form>
+          </div>
+        </div>
       </div>
     </div>
-
-    <div class="form-group">
-      <label for="id_password">Ingrese su contraseña:</label>
-      <input type="password" name="password" id="id_password" class="form-control" required>
-      <div class="invalid-feedback">
-        Por favor, ingresa tu contraseña.
-      </div>
-    </div>
-
-    <div class="form-group">
-      <label for="id_email">Ingrese su correo electrónico:</label>
-      <input type="email" name="email" id="id_email" class="form-control" required>
-      <div class="invalid-feedback">
-        Por favor, ingresa tu correo electrónico.
-      </div>
-    </div>
-
-    <button type="submit" class="btn btn-primary btn-block">Registrarse</button>
-  </form>
+  </div>
 {% endblock %}
+
